Fixed wrapping text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1245,6 +1245,7 @@ padding-top: 20px;
     /* background-color: #f9f9f9; */
     background-color: #efefef;
     border-radius: 5px;
+    word-break: break-all;
 }
 
 .card-images img
